--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,12 +11,12 @@
   --font-sans: var(--font-space-mono);
 }
 
-@media (prefers-color-scheme: light) {
+/* @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
     --foreground: #ededed;
   }
-}
+} */
 
 body {
   background: var(--background);
