feat: first revise

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,12 +2,16 @@
 
 :root {
   --background: #ffffff;
+  --sec-background: #121212;
   --foreground: #171717;
+  --redish: #d70000;
 }
 
 @theme inline {
   --color-background: var(--background);
+  --color-sec-background: var(--sec-background);
   --color-foreground: var(--foreground);
+  --color-redish: var(--redish);
   --font-sans: var(--font-space-mono);
 }
 
